@@ -1,3 +1,7 @@
+2017-02-05  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.target/sparc/20170205-1.c: New test.
+
 2017-02-03  John David Anglin  <danglin@gcc.gnu.org>
 
 	* gfortran.dg/coarray_43.f90: Add "-latomic" option if
